@@ -73,7 +73,8 @@ MS_DLL_EXPORT int msOGCWKT2ProjectionObj( const char *pszWKT, projectionObj *pro
 MS_DLL_EXPORT void msFreeProjection(projectionObj *p);
 MS_DLL_EXPORT int msInitProjection(projectionObj *p);
 MS_DLL_EXPORT int msProcessProjection(projectionObj *p);
-MS_DLL_EXPORT int msLoadProjectionString(projectionObj *p, char *value);
+MS_DLL_EXPORT int msLoadProjectionString(projectionObj *p, const char *value);
+MS_DLL_EXPORT int msLoadProjectionStringEPSG(projectionObj *p, const char *value);
 MS_DLL_EXPORT char *msGetProjectionString(projectionObj *proj);
 MS_DLL_EXPORT void msAxisNormalizePoints( projectionObj *proj, int count,
                                           double *x, double *y );
